--- a/res/layout/list_detail.xml
+++ b/res/layout/list_detail.xml
@@ -1,33 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/item_detail_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:columnCount="4"
+    android:padding="8dip"
+    android:rowCount="2" >
+
+    <TextView
+        android:id="@+id/digit_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_gravity="left|top"
+        android:layout_row="0"
+        android:padding="8dip"
+        android:text="Digit:" />
 
     <TextView
         android:id="@+id/list_detail_digit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="list_detail_digit" />
-    
+        android:layout_column="1"
+        android:layout_gravity="left|top"
+        android:layout_row="0"
+        android:padding="8dip"
+        android:text="digit" />
+
+    <TextView
+        android:id="@+id/digit_even_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="2"
+        android:layout_gravity="left|top"
+        android:layout_row="0"
+        android:padding="8dip"
+        android:text="Even:" />
+
     <TextView
         android:id="@+id/list_detail_digit_even"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
-        android:text="list_detail_digit_even" />
-        
+        android:layout_height="wrap_content"
+        android:layout_column="3"
+        android:layout_gravity="left|top"
+        android:layout_row="0"
+        android:padding="8dip"
+        android:text="even" />
+
+    <TextView
+        android:id="@+id/digit_prime_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_gravity="left|top"
+        android:layout_row="1"
+        android:padding="8dip"
+        android:text="Prime:" />
+
     <TextView
         android:id="@+id/list_detail_digit_prime"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
-        android:text="list_detail_digit_prime" />
-            
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_gravity="left|top"
+        android:layout_row="1"
+        android:padding="8dip"
+        android:text="prime" />
+
+    <TextView
+        android:id="@+id/digit_hex_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="2"
+        android:layout_gravity="left|top"
+        android:layout_row="1"
+        android:padding="8dip"
+        android:text="Hex:" />
+
     <TextView
         android:id="@+id/list_detail_digit_hex"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
-        android:text="list_detail_digit_hex" />
-    
-    
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_column="3"
+        android:layout_gravity="left|top"
+        android:layout_row="1"
+        android:padding="8dip"
+        android:text="hex" />
+
+</GridLayout>
