--- a/res/layout/list_detail.xml
+++ b/res/layout/list_detail.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/item_detail_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:columnCount="2"
-    android:padding="8dip"
-    android:rowCount="2" >
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
         android:id="@+id/list_detail_digit"
@@ -47,4 +41,4 @@
         android:padding="8dip"
         android:text="hex" />
 
-</GridLayout>
+</merge>
