--- a/res/layout/list_detail.xml
+++ b/res/layout/list_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <TextView
         android:id="@+id/list_detail_digit"
@@ -8,37 +8,52 @@
         android:layout_column="0"
         android:layout_gravity="left|top"
         android:layout_row="0"
-        android:padding="8dip"
-        android:text="digit" />
-
+        android:padding="8dip" />
+        
     <TextView
-        android:id="@+id/list_detail_digit_even"
+        android:id="@+id/list_detail_digit_oct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_gravity="left|top"
         android:layout_row="0"
-        android:padding="8dip"
-        android:text="even" />
-
+        android:padding="8dip" />
+       
     <TextView
-        android:id="@+id/list_detail_digit_prime"
+        android:id="@+id/list_detail_digit_hex"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="2"
+        android:layout_gravity="left|top"
+        android:layout_row="0"
+        android:padding="8dip" />
+    
+    <TextView
+        android:id="@+id/list_detail_digit_even"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="0"
         android:layout_gravity="left|top"
         android:layout_row="1"
-        android:padding="8dip"
-        android:text="prime" />
+        android:padding="8dip" />
 
     <TextView
-        android:id="@+id/list_detail_digit_hex"
+        android:id="@+id/list_detail_digit_prime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_gravity="left|top"
         android:layout_row="1"
-        android:padding="8dip"
-        android:text="hex" />
+        android:padding="8dip" />
+
+    <TextView
+        android:id="@+id/list_detail_digit_fibonacci"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="2"
+        android:layout_gravity="left|top"
+        android:layout_row="1"
+        android:padding="8dip" />
+    
 
 </merge>
